# PayloadPack

./: .gitignore  build-debug-rust.bat  build-debug-rust.sh  settings.gradle.kts  setup-rust-arch.sh
app/: build.gradle.kts
app/src/androidTest/java/id/xms/payloadpack/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/id/xms/payloadpack/: MainActivity.kt
app/src/main/java/id/xms/payloadpack/core/: BinaryManager.kt  DirectoryManager.kt  PermissionManager.kt  RootSizeCalculator.kt  StorageHelper.kt  ZipHelper.kt
app/src/main/java/id/xms/payloadpack/data/: FileRepository.kt
app/src/main/java/id/xms/payloadpack/native/: NativeLib.kt
app/src/main/java/id/xms/payloadpack/ui/screens/: HomeScreen.kt  RootInitScreen.kt  StoragePermissionScreen.kt  WorkspaceScreen.kt
app/src/main/java/id/xms/payloadpack/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/id/xms/payloadpack/ui/viewmodel/: HomeViewModel.kt  WorkspaceViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-in/: strings.xml
app/src/main/rust/: Cargo.toml  build.rs
app/src/main/rust/proto/: update_metadata.proto
app/src/main/rust/src/: lib.rs  payload.rs
app/src/main/rust/src/proto/: chromeos_update_engine.rs  mod.rs
app/src/test/java/id/xms/payloadpack/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
