[package]
name = "payloadpack"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
# Required for Android JNI - produces a .so file
crate-type = ["cdylib"]
name = "payloadpack"

[dependencies]
# JNI bindings for Rust
jni = { version = "0.21", features = ["invocation"] }

# Error handling with thiserror
thiserror = "1.0"

# Logging (optional but useful for debugging)
log = "0.4"
android_logger = "0.14"

# Protobuf for parsing payload.bin manifest
prost = "0.13"

# JSON serialization for output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Byte order handling for reading binary data
byteorder = "1.5"

[build-dependencies]
# Protobuf code generation at build time
prost-build = "0.13"

[profile.release]
# Optimize for size (important for Android)
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
